k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otlp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/server-tokens: "false"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /*(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
